buttons correct spacing

--- a/index.css
+++ b/index.css
@@ -126,30 +126,3 @@ h1{
 	margin:auto;
 }    
 
-button, input[type="submit"], input[type="reset"] {
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-}
-
-.vertical-menu{
-	width:200px;
-	margin:auto;
-}
-
-.vertical-menu button{
-	font-family:galaxymonkey;
-	color:white;
-	display:block;
-	font-size:300%;
-	padding:50%;	
-	position:absolute;
-	text-align:center;
-	border-style:solid;
-	border:10px;
-	border-color:white;
-}
