--- a/subpages.css
+++ b/subpages.css
@@ -38,7 +38,9 @@ div{
 }
 
 h1{
-	font-size: 200%;
+	font-family:galaxymonkey;
+	color:white;
+	font-size: 400%;
 	text-align:center;
 	max-width:960px;
 	margin:auto;
@@ -55,19 +57,25 @@ button, input[type="submit"], input[type="reset"] {
 }
 
 .vertical-menu{
-	max-width:960px;
+	top :16%;
+	position:absolute;
+	width:70%;
+	vertical-align:middle;
+	margin:4em 15%;
+}
+
+.vertical-menu button{
+	font-family:galaxymonkey;
+	color:white;
+	box-sizing:inherit;
+	display:block;
+	font-size:300%;
+	border-style:solid;
+	border-color:white;
 	margin:auto;
 }
 
-.vertical-menu .button{
-	font-family:galaxymonkey;
-	color:white;
-	display:block;
-	font-size:300%;
-	padding:50%;	
-	position:absolute;
-	text-align:center;
-	border-style:solid;
-	border:10px;
-	border-color:white;
+.vertical-menu button:hover{
+	color:grey;
+	border-color:grey;
 }
